src/assets/main.css
@import './base.css';

#app {
   /* was max-width: 1980px; */
  max-width: 3000px;
  margin: 0 auto;
  padding: 1rem;
  font-weight: normal;
}

a, .blue, .icon-btn {
  text-decoration: none;
  color: var(--color-link); /* changes based on .dark */
  transition: 0.4s;
}

.nav-text { color: var(--color-link); }

.dark .v-bottom-navigation                { background-color: var(--color-shade-dark); }
.dark .v-bottom-navigation .v-btn--active { background-color: black!important; }

.dark .thumb-link   { background-color: var(--color-shade-light); }
.dark .thumb-link a { color: var(--color-link-dark); }
.bg-shade       { background-color: var(--color-shade); }
.dark .bg-shade { background-color: var(--color-shade-dark); }
.box-border-color       { border-color: var(--vt-c-black-mute); } 
.dark .box-border-color { border-color: var(--vt-c-text-dark-2); } 

@media (prefers-color-scheme: dark) {
   a, .icon-btn {
      color: #9cdcfe; /* Lighter blue */
   }
   .bg-shade { background-color: var(--color-shade-dark); }
   .box-border-color { border-color: var(--vt-c-text-dark-2); } 
}

/* @media (hover: hover) {
   a:hover {
      background-color: var(--vt-c-black);
   }
} */

a:hover {
   font-weight: bold;
}

@media (min-width: 3000px) {
  body {
    display: flex;
    place-items: center;
  }

  #app {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 2rem;
  }
}

